# ImageCropping

./: .gitignore  CMakeLists.txt  readme.md
src/: Base.cpp  Base.h  CMakeLists.txt  main.cpp
